# tries

./: Cargo.toml  Note  README.md  note
dyn_trie/: Cargo.toml  README.md  build.rs
dyn_trie/src/: lib.rs
dyn_trie/src/aide/: mod.rs
dyn_trie/src/res/: mod.rs
dyn_trie/src/uc/: mod.rs
lr_trie/: Cargo.toml  README.md  build.rs  note
lr_trie/src/: lib.rs
lr_trie/src/aide/: mod.rs
lr_trie/src/res/: mod.rs
lr_trie/src/uc/: mod.rs
poetrie/: Cargo.toml  README.md  build.rs  note
poetrie/src/: lib.rs  readme.md
poetrie/src/uc/: mod.rs
res/: note
res/src/: lib.rs
src/: Cargo.toml  dyn_trie.rs  lr_trie.rs  trie.rs
tra/: Cargo.toml
trie/: Cargo.toml  README.md  build.rs  note
trie/src/: lib.rs
trie/src/res/: mod.rs
trie/src/tra/: mod.rs
trie/src/uc/: mod.rs
trie/tests/: custom_ab.rs
uc/: Cargo.toml
uc/src/: lib.rs
