[package]
name = "lr_trie"
version = "1.4.5"
edition = "2021"
keywords = [ "digital-tree", "prefix-tree", "trie", "retrieval-tree" ]
authors = [ "software9119.technology" ]
description = "Left-Right trie is trie capable of mapping any string to any string."
repository = "https://github.com/deep-outcome/tries/tree/main/lr_trie"
license = "MIT"
categories = [ "data-structures" ]
documentation = "https://docs.rs/lr_trie/latest/lr_trie/index.html"
readme = "README.md"
