[package]
name = "poetrie"
version = "0.9.4"
edition = "2024"
keywords = [ "digital-tree", "prefix-tree", "trie", "retrieval-tree", "poetry" ]
authors = [ "software9119.technology" ]
description = "Poetic trie crafted with intetion to ease searching of rhymes for poems."
repository = "https://github.com/deep-outcome/tries/tree/main/trie"
license = "MIT"
categories = [ "data-structures" ]
documentation = "https://docs.rs/poetrie/latest/poetrie/index.html"
readme = "README.md"

[dependencies]
