[package]
name = "poetrie"
version = "0.9.5"
edition = "2024"
keywords = [ "digital-tree", "prefix-tree", "trie", "retrieval-tree", "poetry" ]
authors = [ "software9119.technology" ]
description = "Poetic trie crafted with intetion to ease searching of rhymes for poems."
repository = "https://github.com/deep-outcome/tries/tree/main/poetrie"
license = "MIT"
categories = [ "data-structures" ]
documentation = "https://docs.rs/poetrie/latest/poetrie/index.html"
readme = "README.md"
exclude = ["note", "src/readme.md"]

[features]
rh-aide-tests = []
rh-uc-tests = []

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = 'unpacked'
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false
embed-bitcode=true
force-unwind-tables=true

[profile.release]
opt-level = 3
debug = false
split-debuginfo = 'unpacked'
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
embed-bitcode=true
force-unwind-tables=false
