[package]
name = "plain_trie"
version = "1.0.4"
edition = "2021"
keywords = [ "digital-tree", "prefix-tree", "trie", "retrieval-tree" ]
authors = [ "software9119.technology" ]
description = "Basic Trie is trie capable of mapping any T to string composed of English alphabet letters."
homepage = "https://github.com/bravequickcleverfibreyarn/tries/tree/main/trie"
repository = "https://github.com/bravequickcleverfibreyarn/tries/tree/main/trie"
license = "MIT"
categories = [ "data-structures" ]
documentation = "https://docs.rs/plain_trie/latest/plain_trie/index.html"
readme = "README.md"
