[package]
name = "plain_trie"
version = "7.2.3"
edition = "2021"
keywords = [ "digital-tree", "prefix-tree", "trie", "retrieval-tree" ]
authors = [ "software9119.technology" ]
description = "Classic trie implementation capable of mapping any T to char iterator."
repository = "https://github.com/deep-outcome/tries/tree/main/trie"
license = "MIT"
categories = [ "data-structures" ]
documentation = "https://docs.rs/plain_trie/latest/plain_trie/index.html"
readme = "README.md"

[features]
test-ext = []
